--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ logging.level.org.springframework=INFO
 logging.pattern.console=%d{dd-MM-yyyy HH:mm:ss} %magenta([%thread]) %highlight(%-5level) %logger.%M - %msg%n
 
 server.port=8890
+
+spring.jackson.date-format=yyyy-MM-dd
+
+
